--- a/about/index.html
+++ b/about/index.html
@@ -1052,7 +1052,12 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <h3 id="company" style="position:relative;"><a href="#company" aria-label="company permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Company</h3>
 <h4 id="machine-learning-engineer-sionic-ai-20231023--20240630" style="position:relative;"><a href="#machine-learning-engineer-sionic-ai-20231023--20240630" aria-label="machine learning engineer sionic ai 20231023  20240630 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Engineer</em>, <strong>Sionic AI</strong>, <strong>(2023.10.23 ~ 2024.06.30)</strong></h4>
 <ul>
-<li>Built enterprise-grade LLM applications.</li>
+<li>Built enterprise-grade LLM applications.
+<ul>
+<li>Developed &#x26; Managed the advanced RAG pipeline &#x26; server and text embedding, reranker models, and vector database &#x26; inference servers.</li>
+<li>Developed the utility services likewise category classification, keyword extraction, and summarization.</li>
+</ul>
+</li>
 <li>Worked as a full-time (early start-up member)</li>
 </ul>
 <h4 id="data-scientist-toss-core-20211206--20230927" style="position:relative;"><a href="#data-scientist-toss-core-20211206--20230927" aria-label="data scientist toss core 20211206  20230927 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Data Scientist</em>, <strong>Toss core</strong>, <strong>(2021.12.06 ~ 2023.09.27)</strong></h4>
@@ -1485,4 +1490,4 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
           >
             window.___chunkMapping="{\"app\":[\"/app.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx.js\"],\"component---src-pages-search-tsx\":[\"/component---src-pages-search-tsx.js\"],\"component---src-pages-tags-tsx\":[\"/component---src-pages-tags-tsx.js\"],\"component---src-templates-post-tsx\":[\"/component---src-templates-post-tsx.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="ec9647ee93212f085bba";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="aeb44ca506e0c74149c6";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
