--- a/about/index.html
+++ b/about/index.html
@@ -626,6 +626,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#challenges--awards">Challenges &#x26; Awards</a></p>
 <ul>
 <li><a href="#machine-learning">Machine Learning</a></li>
+<li><a href="#software-engineering">Software Engineering</a></li>
 <li><a href="#hacking">Hacking</a></li>
 </ul>
 </li>
@@ -739,6 +740,10 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </blockquote>
 </li>
 </ul>
+<h3 id="software-engineering" style="position:relative;"><a href="#software-engineering" aria-label="software engineering permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Software Engineering</h3>
+<ul>
+<li><a href="https://www.kaicode.org/2025.html" target="_blank" rel="nofollow noopener noreferrer">KaiCode 2025</a> :: <strong>2nd place</strong></li>
+</ul>
 <h3 id="hacking" style="position:relative;"><a href="#hacking" aria-label="hacking permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Hacking</h3>
 <ul>
 <li>
@@ -784,6 +789,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#challenges--awards">Challenges &#x26; Awards</a></p>
 <ul>
 <li><a href="#machine-learning">Machine Learning</a></li>
+<li><a href="#software-engineering">Software Engineering</a></li>
 <li><a href="#hacking">Hacking</a></li>
 </ul>
 </li>
@@ -796,4 +802,4 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
           >
             window.___chunkMapping="{\"app\":[\"/app.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx.js\"],\"component---src-pages-search-tsx\":[\"/component---src-pages-search-tsx.js\"],\"component---src-pages-tags-tsx\":[\"/component---src-pages-tags-tsx.js\"],\"component---src-templates-post-tsx\":[\"/component---src-templates-post-tsx.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="3ffbfa4f4d2d23f7b9c0";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="72d9719d3d9b76da1fa3";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
